packages/kit/test/apps/basics/src/routes/errors/load-error-string-server/+page.js
import { error } from '@tg-svelte/kit';

/** @type {import('@tg-svelte/kit').Load} */
export async function load() {
	error(555, 'Not found');
}
